<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainActivity">

    <LinearLayout
        android:id="@+id/heading_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:ellipsize="end"
            android:fontFamily="@font/varela_round_regular"
            android:maxLines="3"
            android:text="@string/app_name"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/heading_view">

        <ScrollView
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false" />

                <LinearLayout
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recycler_view"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/white"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:fontFamily="@font/varela_round_regular"
                        android:text="@string/loading"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/no_data_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:contentDescription="@string/content"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_video_found" />

                <TextView
                    android:id="@+id/no_data_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/varela_round_regular"
                    android:text="@string/no_video"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/refresh_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_round"
                    android:fontFamily="@font/varela_round_regular"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/refresh"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <include layout="@layout/shimmer_row_video" />
        </com.facebook.shimmer.ShimmerFrameLayout>

    </FrameLayout>

</RelativeLayout>